# python-libraries

./: LICENSE  README.md  RELEASING.md  noxfile.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
ci/rabbitmq/: podman-compose.yaml
docs/: .gitignore  Makefile
ozobot-actor-api/: README.md  pyproject.toml
ozobot-actor-api/src/ozobot/actors/: __init__.py  actors.py  linefollower.py  userio.py
ozobot-actor-api/tests/: test_actors.py
ozobot-actors/: README.md  pyproject.toml
ozobot-actors/src/ozobot/actors/: __init__.py  actors.py  devices.py  exceptions.py  linefollower.py  ora.py  userio.py
ozobot-actors/tests/: test_actors.py
ozobot-ari/: README.md  pyproject.toml
ozobot-ari/src/ozobot/ari/: __init__.py  conversions.py  exceptions.py  framing.py  playground.py  transport.py
ozobot-ari/src/ozobot/ari/api/: core.py  handle.py  sync.py
ozobot-ari/src/ozobot/ari/driver/: __init__.py  native.py  shared.py  transport.py  web.py  web_conversions.py
ozobot-ari/src/ozobot/ari/protocol/: base.py  memread.py  memwrite.py  methods.py  notification.py  request.py  response.py  serialization.py  types.py
ozobot-ari/src/ozobot/ari/webprotocol/: types.py
ozobot-ari/tests/: test_ari_conversions.py  test_ari_native_driver.py  test_ari_web_driver.py  test_ble_transport.py  test_framing.py  test_protocol.py  test_transport.py
ozobot-ari/tests/test_api/: test_ari_handle.py
ozobot-ble/: README.md  pyproject.toml
ozobot-ble/src/ozobot/ble/: __init__.py  connection.py  datatypes.py  exceptions.py
ozobot-ble/tests/: test_connection.py
ozobot-bluetooth/: pyproject.toml
ozobot-cli/: README.md  pyproject.toml
ozobot-cli/src/ozobot/cli/: app.py  commands_scan.py  runner.py
ozobot-cli/src/ozobot/cli/output/: __init__.py  base.py  json.py  table.py
ozobot-cli/tests/: test_scan.py
ozobot-common/: README.md  pyproject.toml
ozobot-common/src/ozobot/common/: algebraic.py  asyncutils.py  broadcast.py  exceptions.py  logging.py  rpc.py  sync.py
ozobot-common/tests/: test_actors.py  test_algebraic.py  test_asyncutils.py  test_broadcast.py  test_convert.py  test_exceptions.py  test_match.py  test_rlock.py  test_rpc.py  test_sync_utils.py
ozobot-evo/: README.md  pyproject.toml
ozobot-evo/src/ozobot/evo/: __init__.py  api.py  conversions.py  datatypes.py  exceptions.py  protocol.py
ozobot-evo/src/ozobot/evo/api/: __init__.py  algebraic.py  core.py  data_access.py  handle.py  sync.py  watchers.py
ozobot-evo/src/ozobot/evo/driver/: __init__.py  driver.py  native.py  responses.py  shared.py  web.py
ozobot-evo/src/ozobot/evo/drivers/: __init__.py  driver.py  native.py  web.py
ozobot-evo/src/ozobot/evo/webprotocol/: types.py
ozobot-evo/tests/: test_evo_web_driver.py  test_native_driver.py  test_sync.py  test_watchers.py  test_web_driver.py
ozobot-evo/tests/test_api/: test_conversions.py  test_data_access.py  test_evo_core.py  test_evo_handle.py  test_shared.py
ozobot-jsonrpc/: README.md  pyproject.toml
ozobot-jsonrpc/src/ozobot/jsonrpc/: exceptions.py  executor.py  framing.py  stream.py
ozobot-jsonrpc/tests/: test_executor.py  test_framing.py  test_stream.py
ozobot-linefollower/: README.md  pyproject.toml
ozobot-linefollower/src/ozobot/linefollower/: __init__.py  conversions.py  datatypes.py  driver.py  exceptions.py
ozobot-linefollower/src/ozobot/linefollower/api/: actors.py  algebraic.py  core.py  data_access.py  handle.py  sync.py  watchers.py
ozobot-linefollower/src/ozobot/linefollower/driver/: interface.py  shared.py  types.py  web.py
ozobot-linefollower/src/ozobot/linefollower/driver/web/: __init__.py  conversions.py  driver.py  exceptions.py  rpctypes.py
ozobot-linefollower/tests/: test_data_conversions.py  test_linefollower_datatypes.py  test_linefollower_web_driver.py  test_sync.py  test_watchers.py
ozobot-linefollower/tests/test_api/: test_conversions.py  test_core.py  test_data_access.py  test_handle.py  test_shared.py
ozobot-linefollower/tests/test_web_driver/: test_linefollower_web_driver.py  test_web_conversions.py
ozobot-ora/: CHANGELOG.md  README.md  pyproject.toml
ozobot-ora/docs/: conf.py  continuous.md  continuous.rst  coreconcepts.rst  index.rst  simple.rst  singularity.md
ozobot-ora/requirements/: base.txt  docs.txt  test.in  test.txt
ozobot-ora/src/ozobot/ora/: arithmetics.py  datatypes.py  drivers.py  iogroups.py  queue.py  simple.py  sync.py  utils.py
ozobot-ora/src/ozobot/ora/driver/: __init__.py  web.py
ozobot-ora/src/ozobot/ora/drivers/: browser.py
ozobot-ora/src/ozobot/ora/units/: __init__.py  abstract.py  domains.py  exceptions.py  quantities.py
ozobot-ora/tests/test_ora/: test_arithmetics.py  test_datatypes.py  test_queue.py  test_units.py
ozobot-ora/tests/test_ora/test_browser_driver/: test_getters.py  test_io.py  test_movement.py  test_setters.py
ozobot-protocol-common/: pyproject.toml
ozobot-protocol-common/src/ozobot/protocol_common/: broadcast.py  convert.py  crc.py  exceptions.py  rlock.py  rpc.py  types.py
ozobot-protocol-common/tests/: test_broadcast.py  test_convert.py  test_rlock.py  test_rpc.py
ozobot-userio/: README.md  pyproject.toml
ozobot-userio/src/ozobot/userio/: conversions.py  datatypes.py  exceptions.py  interface.py  web.py
ozobot-userio/tests/: test_userio_conversions.py  test_userio_driver.py
ozobot-web/: README.md  pyproject.toml
ozobot-web/src/ozobot/web/: browser.py  conversions.py  driver.py  exceptions.py  rpctypes.py
ozobot-web/tests/: test_linefollower_web_driver.py  test_rpc.py  test_web_conversions.py
ozobot-webrtc/: README.md  pyproject.toml
ozobot-webrtc/src/ozobot/webrtc/: aiortc_wrapper.py  connection.py  datatypes.py  exceptions.py  messaging.py  utils.py  wsrelay.py
ozobot-webrtc/src/ozobot/webrtc/signaling/: negotiation.py  token.py
ozobot-webrtc/tests/: test_connection.py  test_datatypes.py  test_messaging.py  test_signaling.py  test_token.py  test_utils.py  test_wsrelay.py  testutils.py
ozobot-webrtc/tests/mockserver/: __init__.py  mockserver.py  test_mockserver.py
scripts/: smoketest.py  smoketest_sync.py
(+32 files in other folders)
