[project]
name = "ozobot-library"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
  "ozobot-ari",
  "ozobot-ble",
  "ozobot-common",
  "ozobot-evo",
  "ozobot-webrtc",
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-mypy",
  "pytest-ruff",
]

[tool.hatch.envs.default]
installer = "uv"

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
mypy_path = [
  "ozobot-ari/src",
  "ozobot-ble/src",
  "ozobot-common/src",
  "ozobot-evo/src",
  "ozobot-webrtc/src",
]

[tool.ruff]
line-length=120

[tool.pytest.ini_options]
required_plugins = ["pytest-asyncio", "pytest-mypy", "pytest-ruff"]
addopts = """
  --mypy
  --ruff
  --ruff-format
  --deselect=ozobot-evo/src/ozobot/evo/protocol.py
"""
asyncio_mode = "auto"
