[project]
name = "ozobot-library"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = [
  "ozobot-actors",
  "ozobot-ari",
  "ozobot-ble",
  "ozobot-common",
  "ozobot-linefollower",
  "ozobot-evo",
  "ozobot-ora",
  "ozobot-jsonrpc",
  "ozobot-userio",
  "ozobot-web",
  "ozobot-webrtc",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "pytest-aiohttp",
  "pytest-asyncio",
  "pytest-mypy",
  "pytest-ruff",
]
docs = [
    "sphinx>=9.1.0",
    "sphinx-external-toc>=1.1.0",
    "sphinx-rtd-theme>=3.1.0",
]

[tool.hatch.envs.default]
installer = "uv"

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
mypy_path = [
  "ozobot-actors/src",
  "ozobot-ari/src",
  "ozobot-ble/src",
  "ozobot-common/src",
  "ozobot-linefollower/src",
  "ozobot-evo/src",
  "ozobot-ora/src",
  "ozobot-jsonrpc/src",
  "ozobot-userio/src",
  "ozobot-web/src",
  "ozobot-webrtc/src",
]
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length=120

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # isort
    "I",
    # async
    "ASYNC",
]

[tool.pytest.ini_options]
required_plugins = ["pytest-asyncio", "pytest-mypy", "pytest-ruff"]
addopts = """
  --mypy
  --ruff
  --ruff-format
  --deselect=ozobot-evo/src/ozobot/evo/protocol.py
"""
asyncio_mode = "auto"
