[project]
name = "ozobot-library"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "nox>=2026.2.9",
]

[tool.uv.workspace]
members = [
  "ozobot-actors",
  "ozobot-ari",
  "ozobot-ble",
  "ozobot-common",
  "ozobot-linefollower",
  "ozobot-evo",
  "ozobot-ora",
  "ozobot-jsonrpc",
  "ozobot-userio",
  "ozobot-web",
  "ozobot-webrtc",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "ruff",
  "mypy",
  "pytest-aiohttp",
  "pytest-asyncio",
]
docs = [
    "sphinx>=9.1.0",
    "sphinx-external-toc>=1.1.0",
    "sphinx-rtd-theme>=3.1.0",
    "sphinx-tabs>=3.4.7",
]

[tool.hatch.envs.default]
installer = "uv"

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
mypy_path = [
  "src",
]
# plugins = ["pydantic.mypy"]
# as we cannot merge package specific config with the global one,
# we will keep this evo related exclusion here
exclude = [
  "ozobot/evo/protocol.py"
]

[tool.ruff]
target-version = "py312"
line-length=120
# as we cannot merge package specific config with the global one,
# we will keep this evo related exclusion here
extend-exclude = [
  "ozobot-evo/src/ozobot/evo/protocol.py"
]


[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # isort
    "I",
    # async
    "ASYNC",
]

[tool.pytest.ini_options]
required_plugins = ["pytest-asyncio"]
asyncio_mode = "auto"
