[project]
name = "ozobot-actor-api"
version = "0.1.0"
description = "Ozobot actor API package providing an alternative way for controling multiple bots"
readme = "README.md"
authors = [
    { name = "Ondrej Novak", email = "ondrej.novak@ozobot.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ozobot-common",
    "loguru",
]

[project.optional-dependencies]
ari = ["ozobot-ari"]
evo = ["ozobot-evo"]

[tool.hatch.build.targets.sdist]
sources = ["src"]
only-include = ["src/ozobot"]

[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src/ozobot"]

[tool.uv.sources]
ozobot-ari = { workspace = true }
ozobot-evo = { workspace = true }
ozobot-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
