[project]
name = "ozobot-actors"
description = "Ozobot actor API package providing an alternative way for controling multiple bots"
readme = "README.md"
authors = [
    { name = "Ondrej Novak", email = "ondrej.novak@ozobot.com" }
]
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "ozobot-common~=0.1",
    "ozobot-linefollower~=0.1",
    "loguru",
]

[project.optional-dependencies]
ari = ["ozobot-ari~=0.1"]
evo = ["ozobot-evo~=0.1"]
ora = ["ozobot-ora~=1.0.6"]

[project.urls]
Homepage = "https://ozobot.com"
Github = "https://github.com/ozobot/python-libraries"

[tool.hatch.build.targets.sdist]
sources = ["src"]
only-include = ["src/ozobot"]

[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src/ozobot"]

[tool.uv.sources]
ozobot-ari = { workspace = true }
ozobot-evo = { workspace = true }
ozobot-common = { workspace = true }
ozobot-linefollower = { workspace = true }
ozobot-ora = { url = "https://static.ozobot.com/python-packages/ozobot_ora-1.0.6-92d7fe8529c7c554ec80535db5cd6b0d0c5997e9-py3-none-any.whl" }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"
root = "../"
