[project]
name = "ozobot-actors"
description = "Ozobot actor API package providing an alternative way for controling multiple bots"
readme = "README.md"
authors = [
    { name = "Ondrej Novak", email = "ondrej.novak@ozobot.com" }
]
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "ozobot-common>=0.2",
    "ozobot-linefollower>=0.2",
]

[project.optional-dependencies]
ari = ["ozobot-ari>=0.2"]
evo = ["ozobot-evo>=0.2"]
ora = ["ozobot-ora~=1.0.6"]

[dependency-groups]
dev = [
    "ozobot-ora",
    "ozobot-userio",
    "ozobot-linefollower",
]

[project.urls]
Homepage = "https://ozobot.com"
Github = "https://github.com/ozobot/python-libraries"

[tool.hatch.build.targets.sdist]
sources = ["src"]
only-include = ["src/ozobot"]

[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src/ozobot"]

[tool.uv.sources]
ozobot-ari = { workspace = true }
ozobot-evo = { workspace = true }
ozobot-common = { workspace = true }
ozobot-userio = { workspace = true }
ozobot-linefollower = { workspace = true }
ozobot-ora = { workspace = true }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"
root = "../"
git_describe_command = ['git', 'describe', '--dirty', '--tags', '--long', '--abbrev=40', '--match', 'ozobot-actors-*']
