[project]
name = "ozobot-ari"
version = "0.1.0"
description = "Ozobot ARI library"
readme = "README.md"
authors = [
    { name = "Ondrej Novak", email = "ondrej.novak@ozobot.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ozobot-ble>=0.1.0",
    "ozobot-common>=0.1.0",
    "ozobot-jsonrpc>=0.1.0",
    "ozobot-webrtc>=0.1.0",
    "loguru",
    "pydantic>=2.11.7",
]

[tool.hatch.build.targets.sdist]
sources = ["src"]
only-include = ["src/ozobot"]

[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src/ozobot"]

[tool.uv.sources]
ozobot-ble = { workspace = true }
ozobot-common = { workspace = true }
ozobot-jsonrpc = { workspace = true }
ozobot-webrtc = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
