[project]
name = "ozobot-ari"
description = "Ozobot ARI library"
readme = "README.md"
authors = [
    { name = "Ondrej Novak", email = "ondrej.novak@ozobot.com" }
]
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "ozobot-ble~=0.1; platform_system != 'Emscripten'",
    "ozobot-common~=0.1",
    "ozobot-jsonrpc~=0.1",
    "ozobot-linefollower~=0.1",
    "ozobot-webrtc~=0.1; platform_system != 'Emscripten'",
    "loguru",
    "pydantic>=2.10.5",
]

[project.urls]
Homepage = "https://ozobot.com"
Github = "https://github.com/ozobot/python-libraries"

[tool.hatch.build.targets.sdist]
sources = ["src"]
only-include = ["src/ozobot"]

[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src/ozobot"]

[tool.uv.sources]
ozobot-ble = { workspace = true }
ozobot-common = { workspace = true }
ozobot-jsonrpc = { workspace = true }
ozobot-linefollower = { workspace = true }
ozobot-webrtc = { workspace = true }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"
root = "../"
