[project]
name = "ozobot-ble"
version = "0.1.0"
description = "Ozobot BLE transport protocol"
readme = "README.md"
authors = [
    { name = "Ondrej Novak", email = "ondrej.novak@ozobot.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ozobot-common>=0.1.0",
    "bleak>=0.22.3",
    "loguru",
]

[tool.hatch.build.targets.sdist]
sources = ["src"]
only-include = ["src/ozobot"]

[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src/ozobot"]

[tool.uv.sources]
ozobot-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
