[project]
name = "ozobot-bluetooth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ondrej Novak", email = "ondrej.novak@ozobot.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
