[project]
name = "ozobot-evo"
version = "0.1.0"
description = "Ozobot EVO library"
readme = "README.md"
authors = [
    { name = "Ondrej Novak", email = "ondrej.novak@ozobot.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ozobot-ble",
    "ozobot-common",
    "loguru",
]

[tool.hatch.build.targets.sdist]
sources = ["src"]
only-include = ["src/ozobot"]

[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src/ozobot"]

[tool.uv.sources]
ozobot-ble = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
