[project]
name = "ozobot-userio"
description = "Ozobot userio drivers"
readme = "README.md"
authors = [
    { name = "Ondrej Novak", email = "ondrej.novak@ozobot.com" }
]
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "ozobot-common>=0.2",
    "ozobot-linefollower>=0.2",
    "ozobot-web>=0.2; platform_system == 'Emscripten'",
    "pydantic>=2; platform_system == 'Emscripten'",
]

[dependency-groups]
dev = [
    "ozobot-web",
    "pydantic",
]

[tool.hatch.build.targets.sdist]
sources = ["src"]
only-include = ["src/ozobot"]

[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src/ozobot"]

[tool.uv.sources]
ozobot-common = { workspace = true }
ozobot-linefollower = { workspace = true }
ozobot-web = { workspace = true }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"
root = "../"
git_describe_command = ['git', 'describe', '--dirty', '--tags', '--long', '--abbrev=40', '--match', 'ozobot-userio-*']
