[project]
name = "ozobot-webrtc"
version = "0.1.0"
description = "Ozobot WebRTC library"
readme = "README.md"
authors = [
    { name = "Ondrej Novak", email = "ondrej.novak@ozobot.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ozobot-common>=0.1.0",
    "aiohttp>=3.12.13",
    "aiormq>=6.9.0",
    "aiortc>=1.13.0",
    "loguru",
    "pydantic>=2",
    "websockets>=15.0.0",
]

[tool.hatch.build.targets.sdist]
sources = ["src"]
only-include = ["src/ozobot"]

[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src/ozobot"]

[tool.uv.sources]
ozobot-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
